add checkpoints to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 .ipynb_checkpoints/functions-checkpoint.py
 .ipynb_checkpoints/Untitled-checkpoint.ipynb
 __pycache__/functions.cpython-39.pyc
+.ipynb_checkpoints/D206_Paper-checkpoint.ipynb
+.ipynb_checkpoints/D206_code-checkpoint.ipynb
