--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 __pycache__/functions.cpython-39.pyc
 .ipynb_checkpoints/D206_Paper-checkpoint.ipynb
 .ipynb_checkpoints/D206_code-checkpoint.ipynb
+.ipynb_checkpoints/cleaned_churn_data-checkpoint.csv
